# steamroll-internal

./: .coveragerc  README.md  prek.toml  pyproject.toml
.github/workflows/: python-publish.yml  test.yml
steamroll/: _tmc_import.py  steamroll.py
steamroll/xyz2mol/: xyz2mol.py
steamroll/xyz2mol_tm/: xyz2mol_local.py  xyz2mol_tmc.py
steamroll/xyz2mol_tmc/: xyz2mol_local.py  xyz2mol_tmc.py
tests/: test_steamroll.py
tests/data/: Ce_18-crown-6.xyz  PdCl2MeCN2.xyz  TeH2-NH3.xyz  ethyl_methyl_cobaltacene.xyz  ferrocene.xyz  hypervalent_iodine.xyz  methyl_radical.xyz  methylammonium.xyz
