[project]
name = "steamroll"
description = "Package to convert 3D molecules to RDKit"
license = {file = "LICENSE"}
version = "0.0.2"
readme = "README.md"
keywords = []
authors = [
    {name = "Jonathon Vandezande"},
    {name = "Corin Wagen"}
]
requires-python = ">=3.11"
dependencies = [
    "rdkit",
    "numpy",
    "networkx",
]

[dependency-groups]
dev = [
    "prek>=0.3.3",
    "pytest>=8.4",
    "pytest-cov>=7.0",
    "ruff>=0.14",
    "ty>=0.0.16",
    "rdkit-stubs>=0.8",
]

[tool.ruff]
line-length = 100
exclude = ["steamroll/xyz2mol.py", "steamroll/xyz2mol_tm"]

[tool.ruff.lint]
select = [
    "B",  # bugbear
    "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming conventions
    "W",  # pycodestyle warnings
    "C4", # comprehensions
    "PL", # pylint
    "PT", # flake8-pytest-style
    "PIE", # misc lints
    "PYI", # flake8-pyi
    "TID", # tidy imports
    "TCH", # type-checking imports
    "RUF", # Ruff-specific rules
    "RSE", # flake8-raise
    "ICN001", # unconventional-import-alias
]
ignore = [
    "N803", # Argument name should be lowercase
    "N806", # Non-lowercase variable in function
    "PLR0911", # Too many returns
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments to function call
    "PLR0914", # Too many locals
    "PLR0915", # Too many statements
    "PLR1702", # Too many nested-blocks
    "PLR2004", # Magic value used in comparison
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests", "steamroll"]
addopts = "--doctest-modules --ignore=steamroll/xyz2mol.py --ignore=steamroll/xyz2mol_tm"
doctest_optionflags = "NORMALIZE_WHITESPACE"

[tool.ty.src]
exclude = ["steamroll/xyz2mol.py", "steamroll/xyz2mol_tm"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
